--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>Regina (111111)</li>
     <li>Saskatoon (123,456)</li>
     <li>Shanghai (17,836,133)</li>
     <li>Istanbul (13,854,740)</li>
