--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,7 @@
   <hr/>
 
   <ol>
+    <li>Chennai</li>
     <li>Regina (111111)</li>
     <li>Saskatoon (123,456)</li>
     <li>Shanghai (17,836,133)</li>
@@ -30,6 +31,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Toronto (2.93 million)</li>
     <li>Munich (1000,000)</li>
+  
   </ol>
 
 </body>
