--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,8 @@
 
   <ol>
     <li>Chennai</li>
+    <li>Dhaka</li>
+    <li>Ottowa</li>
     <li>Regina (111111)</li>
     <li>Saskatoon (123,456)</li>
     <li>Shanghai (17,836,133)</li>
