--- a/cities.html
+++ b/cities.html
@@ -25,6 +25,7 @@
     <li>Chennai</li>
     <li>Dhaka</li>
     <li>Ottowa</li>
+    <li>Hamilton</li>
     <li>Regina (111111)</li>
     <li>Saskatoon (123,456)</li>
     <li>Shanghai (17,836,133)</li>
